# devil-cuda

./: CMakeLists.txt
src/: batch.cpp  batch.hpp  einsum.cpp  einsum.hpp  inverse.cpp  inverse.hpp  kernel.cu  kernel.h  main.cpp  test.cpp  utils.hpp
